syntax = "proto3";

import "common/common.proto";
import "google/api/annotations.proto";

package task;
option go_package = "github.com/PaddlePaddle/PaddleDTX/dai/protos/task";

// Cluster defines communication communication between client and server, and communication between cluster members.
service Task {
    // ListTask is provided by Executor server for Executor client to list tasks with filters.
    rpc ListTask(ListTaskRequest)  returns (FLTasks) {
        option (google.api.http) = {
            post : "/v1/task/list"
            body : "*"
        };
    }
    // GetTaskById is provided by Executor server for Executor client to query a task.
    rpc GetTaskById(GetTaskRequest) returns (FLTask) {
        option (google.api.http) = {
            post : "/v1/task/getbyid"
            body : "*"
        };
    }
    // GetPredictResult is provided by Executor server for Executor client to get prediction result.
    rpc GetPredictResult(TaskRequest) returns (PredictResponse) {
        option (google.api.http) = {
            post : "/v1/task/predictres/get"
            body : "*"
        };
    }
    // StartTask is for Executors to request remote ones to start a task.
    rpc StartTask(TaskRequest) returns (TaskResponse);
}

// TaskRequest is message sent between Executors to request to start a task. 
message TaskRequest {
    bytes pubKey = 1;
    string taskID = 2;
    bytes signature = 4;
}

// TaskResponse is a message received from Executor.
message TaskResponse {
    string taskID = 2;
}

// ListTaskRequest is message sent to Executor server to list tasks
message ListTaskRequest {
    bytes pubKey = 1;  // requester's public key
    bytes ePubKey = 2;  // executor's public key
    string status = 3;
    int64 timeStart = 4;
    int64 timeEnd = 5;
    int64 limit = 6;
}

// DataForTask is a message received from Executor
message DataForTask {
    bytes  owner = 1;  // samples'owner, also dataOwner who confirms executor's authorization application for the use of samples
	bytes  executor = 2; // executor who process tasks
	string dataID = 3; // file id of samples
	string psiLabel = 4 ; // psi lable for vertical learning
	int64  confirmedAt = 5; // task confirm time
	int64  rejectedAt = 6; // task reject time
    string address = 7; // host of Executor 
    bool isTagPart = 8;   
}

// FLTask is a message received from Executor and defines Federated Learning Task based on MPC
message FLTask {
    string taskID = 1;
    string name = 2;
    string description = 3;

    bytes requester = 4;
    repeated DataForTask dataSets = 5;
	common.TaskParams algoParam = 6; // fl algorithm related params

	string status = 7;
	string errMessage = 8;
	string result = 9;
	int64 publishTime = 10;
	int64 startTime = 11;
	int64 endTime = 12;
}

// FLTasks is list of FLTasks received from Executor 
message FLTasks {
    repeated FLTask fLTasks = 1;
}

// GetTaskRequest is message sent to Executor server to get a task
message GetTaskRequest {
    string taskID = 1;
}

// PredictResponse is a message received from Executor 
message PredictResponse {
    string taskID = 1;
    bytes payload = 2; 
}

